# mc_udp

./: .clang-format-common.sh  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  mc_udpConfig.cmake
.github/workflows/: build.yml  package.yml
.github/workflows/sources/: package.yml
binding/python/: CMakeLists.txt
binding/python/dummy/: client.py  server.py
binding/python/include/: helper.hpp
binding/python/mc_udp/: __init__.py
binding/python/mc_udp/client/: c_client.pxd  client.pxd  client.pyx
binding/python/mc_udp/data/: c_data.pxd  c_data_private.pxd  data.pxd  data.pyx
binding/python/mc_udp/server/: c_server.pxd  server.pxd  server.pyx
debian/: changelog  control  copyright  libmc-udp-dev.install  mc-udp-control.install  mc-udp-openrtm.install  python-mc-udp.install  rules
include/mc_nng/: logging.h
include/mc_nng/client/: Client.h
include/mc_nng/data/: Hello.h  RobotControl.h  RobotSensors.h
include/mc_nng/server/: Server.h
include/mc_udp/: logging.h
include/mc_udp/client/: Client.h  api.h
include/mc_udp/data/: Hello.h  Init.h  MultiRobotMessage.h  MultiRobotMessage.hpp  RobotControl.h  RobotSensors.h  api.h  utils.h
include/mc_udp/server/: Server.h  api.h
src/: CMakeLists.txt
src/client/: CMakeLists.txt  Client.cpp  MCControlNNG.cpp  MCUDPControl.cpp
src/client/dummy/: CMakeLists.txt  dummy.cpp
src/data/: RobotControl.cpp  RobotSensors.cpp
src/server/: CMakeLists.txt  Server.cpp
src/server/dummy/: CMakeLists.txt  dummy.cpp
src/server/openrtm/: CMakeLists.txt  MCNNGControl.cpp  MCNNGControl.h  MCNNGControlComp.cpp  MCUDPControl.cpp  MCUDPControl.h  MCUDPControlComp.cpp  MCUDPSensors.cpp  MCUDPSensors.h  MCUDPSensorsComp.cpp
